--- a/zodiac-js-frontend/index.html
+++ b/zodiac-js-frontend/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
     <meta charset="utf-8">
-    
     <title></title>
   </head>
   <body>
-   Sample text - replace me! 
+   <!-- Sample text - replace me!  -->
+   <script async src="src/index.js"></script>
   </body>
-  
 </html>
